test_suite/tests/ui/string/visibility/inner_field.rs
use nutype::nutype;

#[nutype]
struct Name(pub String);

fn main() {}
